tests/ui/confuse-field-and-method/issue-18343.rs
struct Obj<F> where F: FnMut() -> u32 {
    closure: F,
}

fn main() {
    let o = Obj { closure: || 42 };
    o.closure();
    //~^ ERROR no method named `closure` found
}
